--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,24 @@
 {
-  "name": "mariano/li3_gearman",
-  "type": "lithium-library",
-  "description": "Lithium integration with Gearman.",
-  "homepage": "https://github.com/mariano/li3_gearman",
-  "authors": [{
-    "name": "Mariano Iglesias",
-    "email": "mgiglesias@gmail.com"
-  }],
-
-  "require": {
-    "composer/installers": "dev-master"
+	"name": "mariano/li3_gearman",
+	"type": "lithium-library",
+	"description": "Lithium integration with Gearman",
+	"keywords": ["gearman","gearmand","job","queue","lithium"],
+	"homepage": "https://github.com/mariano/li3_gearman",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Mariano Iglesias",
+			"email": "mgiglesias@gmail.com"
+		}
+	],
+	"autoload": {
+		"psr-0": { "li3_gearman" : "" }
+	},
+	"require": {
+		"php": ">=5.3.2",
+	    "composer/installers": "dev-master"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "~3.7.16"
 	}
 }
