--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
 		"psr-0": { "li3_gearman" : "" }
 	},
 	"require": {
-		"php": ">=5.3.2",
-	    "composer/installers": "dev-master"
+		"php": ">=5.3.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7.16"
