--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~3.7.16"
-	}
+	},
+        "require": {
+                "composer/installers": "*"
+        }
 }
